--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yet-another-react-lightbox": "^3.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
