--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "reactjs-popup": "^2.0.6",
     "slick-carousel": "^1.8.1",
     "yet-another-react-lightbox": "^3.20.0"
   },
