--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-slick": "^0.30.2",
     "reactjs-popup": "^2.0.6",
     "slick-carousel": "^1.8.1",
+    "uuidv4": "^6.2.13",
     "yet-another-react-lightbox": "^3.20.0"
   },
   "devDependencies": {
