--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@demark-pro/react-booking-calendar": "^4.0.3",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.5",
     "notistack": "^3.0.1",
