--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@demark-pro/react-booking-calendar": "^4.0.3",
+    "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.5",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "reactjs-popup": "^2.0.6",
     "slick-carousel": "^1.8.1",
     "uuidv4": "^6.2.13",
-    "yet-another-react-lightbox": "^3.20.0"
+    "yet-another-react-lightbox": "^3.20.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
